go-sdk/2.7/project-docs/compatibility.md
---
title: Compatibility
description: Features available in different SDK versions, and compatibility
  between Server and SDK. Plus notes on Cloud, networks, and AWS Lambda.
editUrl: https://github.com/couchbase/docs-sdk-go/edit/release/2.7/modules/project-docs/pages/compatibility.adoc
pubDate: 2026-03-25T08:25:24.097Z
link: xref:2.7@go-sdk:project-docs:compatibility.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/go-sdk/2.7/project-docs/compatibility.html)

# Compatibility

> Features available in different SDK versions, and compatibility between Server and SDK. Plus notes on Cloud, networks, and AWS Lambda. 

In line with the [Golang project](https://golang.org/doc/devel/release.html#policy), we support both the current, and the previous, versions of Go. At time of writing (October 2023), this is 1.20 and 1.21\. Older versions may remain compatible, but are not supported.

## [](#couchbase-versionsdk-version-matrix)Couchbase Version/SDK Version Matrix

Couchbase SDKs are tested against a variety of different environments to ensure both backward and forward compatibility with different versions of Couchbase Server. The matrix below denotes the version of Couchbase Server, the version of the Go SDK and whether the SDK is:

* ✖ **Unsupported**: This combination is not tested, and is not within the scope of technical support if you have purchased a support agreement.
* ◎ **Compatible**: This combination has been tested previously, and should be compatible. This combination is not recommended by our technical support organization. It is best to upgrade either the SDK or the Couchbase version you are using.
* ✔ **Supported**: This combination is subject to ongoing quality assurance, and is fully supported by our technical support organization.

__Table 1\. Recommended SDK per Server Version Matrix__
|                    | SDK 2.0 - 2.2 | 2.3 - 2.7 |
| ------------------ | ------------- | --------- |
| **Server 6.6**     | **✔**         | **✔**     |
| **Server 7.0-7.2** | **◎**         | **✔**     |

Note the [End of Life dates](https://www.couchbase.com/support-policy) for Couchbase Server and SDK versions. See the notes there for Support details.

### [](#capella-compatibility)Capella Compatibility

At time of release, the Couchbase 2.6 Go SDK is fully compatible with Couchbase Capella, our fully-hosted database-as-a-service. To make development easier, the 2.6 SDK includes the Capella client certificate ready installed.

Note, Capella is offered as a fully provisioned service, so the underlying version of Couchbase Server changes over time. For this reason, compatibility information between Capella and the SDK is available [on the Capella compatibility page](../../../cloud/reference/sdk-compatibility.md).

## [](#platform-compatibility)Platform Compatibility

The Couchbase Go SDK is tested and supported on the following platforms:

### GNU/Linux

* Amazon Linux 2 & AL2023.
* Red Hat Enterprise Linux 8 & 9;
* Ubuntu (LTS) 20.04 (_Focal_) & 22.04 (_Jammy_).
* Debian 10 (_Buster_) & 11 (_Bullseye_).
* Alpine Linux.

### Microsoft Windows

Microsoft Windows 10 / All LTS releases from Windows Server 2019.

### Mac OS X

The current and previous two releases of OS X. At time of writing (October 2023): 14 (Sonoma), 13 (Ventura), and 12 (Monterey). M1 ARM architecture is fully supported in the 2.7 Go SDK.

Although installable or compilable on many other platforms, we cannot provide support for untested combinations.

### [](#arm-processor-support)ARM Processor Support

AWS Amazon Graviton2, Apple M1 ARM processors, and ARMv8 on Ubuntu 20.04+ (from SDK 2.6).

## [](#couchbase-new-feature-availability-matrix)Couchbase New Feature Availability Matrix

__Table 2\. Couchbase Server and SDK Supported Version Matrix__
|                                                      | Server 6.6                                                   | Server 7.0-7.1                                                                                      | Server 7.2 |
| ---------------------------------------------------- | ------------------------------------------------------------ | --------------------------------------------------------------------------------------------------- | ---------- |
| Enhanced Durability                                  | All SDK versions                                             |                                                                                                     |            |
| Durable Writes                                       | Since 2.0                                                    |                                                                                                     |            |
| Analytics                                            | Since 1.5                                                    |                                                                                                     |            |
| Collections                                          | Developer Preview in 6.6, SDK 2.0                            | Since 2.1.8                                                                                         |            |
| Scope-Level SQL++ Queries & all Collections features | Not Supported                                                | Since SDK 2.3.0                                                                                     |            |
| Field Level Encryption v2                            | Since SDK 2.3.0\[[1](#%5Ffootnotedef%5F1 "View footnote.")\] |                                                                                                     |            |
| Request Tracing                                      | Since SDK 2.0.3 (stable interface from 2.3.0)                |                                                                                                     |            |
| Distributed ACID Transactions                        | Not Supported                                                | Since SDK 2.4.0                                                                                     |            |
| Cloud Native Gateway                                 | Not Supported                                                | From SDK 2.7.0 (with [Couchbase Autonomous Operator](../../../operator/current/overview.md) 2.6.1+) |            |

## [](#couchbase-go-sdk)Couchbase Go SDK

The Couchbase Go SDK is installed and managed using `gopkg`, in accordance with established best practices within the Go Community. As a result, specific versions are installed within a specific developer environment. The SDK follows [Semantic Versioning](http://semver.org/) and typically release an update of the SDK the third Tuesday of each month. In order to update your specific developer environment to this new version, you will have to instruct Go to `go get` that specific version. For further information, please reference the section on [installation](sdk-full-installation.md).

## [](#network-requirements)Network Requirements

Couchbase SDKs are developed to be run in an environment with local area network (LAN) like throughput and latencies. While there is no technical issue that prevents the use across a wide area network (WAN), SDKs have certain thresholds around timeouts and behaviors to recover that will not be the same once the higher latency and possible bandwidth constraints and congestion of a WAN is introduced. Couchbase tests for correctness under LAN like conditions. For this reason, only LAN-like network environments are officially supported.

Couchbase does document, for purposes of convenience when developing and performing basic operational work, what may need to be tuned when network throughputs and latencies are higher. If you encounter issues, even with these tune-ables, you should attempt the same workload from a supported, LAN-like environment.

### [](#serverless-environments)Serverless Environments

SDK API 3.4 introduces better resilience in handling errors that may occur when running your application in serverless environments, in particular when processes are frozen or thawed, and a rebalance is required. This means official support for AWS Lambda, Azure Functions, and GCP Functions.

> [!NOTE]
> When **DNS SRV** records are used to connect to the SDK it is possible for the underlying addresses to change (i.e. the cluster could move). The SDK will detect this and react accordingly so that your application can continue to work correctly.

## [](#interface-stability)Interface Stability

Couchbase SDKs indicate the stability of an API through documentation. Since there are different meanings when developers mention stability, we mean **interface stability**: how likely the interface is to change or be removed entirely. A stable interface is one that is guaranteed not to change between versions, meaning that you may use an API of a given SDK version and be assured that the given API will retain the same parameters and behavior in subsequent versions. An unstable interface is one which may appear to work or behave in a specific way within a given SDK version, but may change in its behavior or arguments in future SDK versions, causing odd application behavior or compiler/API usage errors. **Implementation stability** is implied to be more reliable at higher levels, but all are tested to the level that is appropriate for their stability.

Couchbase uses three interface stability classifiers. You may find these classifiers appended as annotations or comments within documentation for each API:

* **Committed**: This stability level is used to indicate the most stable interfaces that are guaranteed to be supported and remain stable between SDK versions. This is the default — unless otherwise stated in the documentation, each API has **Committed** status.
* **Uncommitted**: This level is used to indicate APIs that are _unlikely_ to change, but _may_ still change as final consensus on their behavior has not yet been reached. _Uncommitted_ APIs usually end up becoming stable APIs.
* **Volatile**: This level is used to indicate experimental APIs that are still in flux and may likely be changed. It may also be used to indicate inherently private APIs that may be exposed, but "YMMV" (your mileage may vary) principles apply. _Volatile_ APIs typically end up being promoted to _Uncommitted_ after undergoing some modifications.

APIs that are marked as _Committed_ have a stable implementation. _Uncommitted_ and _Volatile_ APIs should be stable within the bounds of any known and often documented issues, but Couchbase has not made a commitment to these APIs and may not respond to reported defects with the same priority.

Additionally, take note of the following interface labels:

* **Deprecated**: Any API marked deprecated may be removed in the next major version released. Couchbase recommends migrating from the deprecated API to the replacement as soon as possible. In rare instances, deprecated API may be rendered non-functional in a dot-minor release when the API cannot continue to be supported.
* **Internal**: This level is used to indicate you should not rely on this API as it is not intended for use outside the module, even to other Couchbase components.

## [](#api-version)API Version

This release of the SDK is written to version 3.4 of the SDK API specification (and matching the features available in Couchbase 7.2 and earlier). For most developers, just using the latest version will be all that matters, and few will need to look at another of our SDKs. Just for those few that do, the table below shows each Couchbase SDK release version that matches the API version.

Whilst these two numbers match for the .NET and Ruby SDKs, this is not the case for the others, as version numbers for individual SDKs are bumped up in line with [Semantic Versioning](https://semver.org/) — check the [release notes](#sdk-release-notes) of each SDK for individual details.

__Table 3\. SDK API Versions__
|                  | API 3.0   | API 3.1 | API 3.2   | API 3.3       | API 3.4                                             |
| ---------------- | --------- | ------- | --------- | ------------- | --------------------------------------------------- |
| C (libcouchbase) | 3.0       | 3.1     | 3.2       | 3.3.0 - 3.3.2 | 3.3.3 \[[2](#%5Ffootnotedef%5F2 "View footnote.")\] |
| .NET             | 3.0       | 3.1     | 3.2       | 3.3           | 3.4                                                 |
| Go               | 2.0 & 2.1 | 2.2     | 2.3 & 2.4 | 2.5           | 2.6 & 2.7                                           |
| Java             | 3.0       | 3.1     | 3.2       | 3.3           | 3.4 & 3.5                                           |
| Kotlin           | \-        | \-      | \-        | 1.0           | 1.1 & 1.2                                           |
| Node.js          | 3.0       | 3.1     | 3.2 & 4.0 | 4.1           | 4.2                                                 |
| PHP              | 3.0       | 3.1     | 3.2       | 4.0           | 4.1                                                 |
| Python           | 3.0       | 3.1     | 3.2       | 4.0           | 4.1                                                 |
| Ruby             | 3.0       | 3.1     | 3.2       | 3.3           | 3.4                                                 |
| Scala            | 1.0       | 1.1     | 1.2       | 1.3           | 1.4 & 1.5                                           |

**SDK API 3.4**: Introduced support for ARM v8 on Ubuntu 20.04, Transactions on Spring Data Couchbase, and compatibility with running in serverless environments, such as AWS λ. The `couchbase2://` connection string was introduced in Go 2.7, Java 3.5, Kotlin 1.2, and Scala 1.5, for a future release of [Couchbase Autonomous Operator](../../../operator/current/overview.md) with Cloud Native Gateway.

**SDK API 3.3**: Introduced alongside Couchbase Server 7.1, adds Management API for Eventing and Index Management for Scopes & Collections; extends Bucket Management API to support Custom Conflict Resolution and Storage Options; adds new platform support for Linux Alpine OS, Apple M1, and AWS Graviton2; provides improved error messages for better error handling. and an upgraded Spark Connector that runs on Spark 3.0 & 3.1 Platform.

**SDK API 3.2**: Introduced alongside Couchbase Server 7.0, provides features in support of Scopes and Collections, extends capabilities around Open Telemetry API to instrument telemetry data, enhanced client side field level encryption to add an additional layer of security to protect sensitive data, adds new platform support such as Ubuntu 20.04 LTS.

**SDK API 3.1**: Introduced alongside Couchbase Server 6.6, focuses on Bucket Management API, adds capabilities around Full Text Search features such-as Geo-Polygon support, Flex Index, and Scoring.

**SDK API 3.0**: Introduced alongside Couchbase Server 6.5, is a major overhaul from its predecessor, has simplified surface area, removed long-standing bugs and deprecated/removed old API, introduces new programming languages Scala and Ruby, written in anticipation to support Scopes and Collections.

###### [](#)

## [](#older-sdk-versions)Older SDK Versions

Documentation on older, unsupported versions of the SDK — that have reached end-of-life — can be found in the [archive](https://docs-archive.couchbase.com/home/index.html).

---

[1](#%5Ffootnoteref%5F1). Field Level Encryption distributed as separate library. 

[2](#%5Ffootnoteref%5F2). Excludes DNS SRV refresh support in Serverless Environments.